--- a/projects/Soal Matematika.html
+++ b/projects/Soal Matematika.html
@@ -667,7 +667,8 @@
     <!-- <p>Terakhir diupdate: 19 September 2025</p> -->
     <!-- <p>Terakhir diupdate: 1 Oktober 2025</p> -->
     <!-- <p>Terakhir diupdate: 8 Oktober 2025</p> -->
-    <p>Terakhir diupdate: 10 Oktober 2025</p>
+    <!-- <p>Terakhir diupdate: 10 Oktober 2025</p> -->
+    <p>Terakhir diupdate: 14 Oktober 2025</p>
 
     <script>
         // Time
@@ -782,13 +783,14 @@
         
         // a = 0;
         // a = -1;
-        a = '';
+        var a = '';
         b = 0;
         a2 = 0;
         a3 = 0;
         b2 = 0;
-        a_2 = 0;
-        b_2 = 0;
+        // a_2 = 0;
+        var a_2 = 0;
+        var b_2 = 0;
         function buat() {
 			var bs = document.getElementById("pilihan-bentuk-soal");
             var bs2 = bs.options[bs.selectedIndex];
@@ -874,6 +876,8 @@
             soal = '';
             soal_check = true;
             document.getElementById('tipe2').style.display = 'block';
+
+            // if (typeof a === 'undefined') a = '';
             
             if (e1.index == 0) {
                 if (e1_bentuk.index == 0) {
@@ -894,7 +898,7 @@
                         // while (typeof a2 === 'undefined' || a == a2 || check) {
                         while (typeof a2 === 'undefined' || a == a2) {
                             a2 = Math.floor(21 * Math.random());
-                            console.log(a2);
+                            // console.log(a2);
                         }
                         // ctx.clear();
                         // ctx.fill();
@@ -933,7 +937,6 @@
                     if (level2.index == 0) {
                         while (typeof a2 === 'undefined' || a == a2) {
                             a2 = Math.floor(21 * Math.random());
-                            console.log(a2);
                         }
                     } else if (level2.index == 1) {
                         while (typeof a2 === 'undefined' || a == a2) {
@@ -964,10 +967,88 @@
                     }
                 } else if (e1_bentuk.index == 2) {
                     // soal = 'Banyaknya titik di gambar ini adalah ...';
-                    soal_teks = 'Representasi bilangan dari 20 adalah ...';
+                    if (level2.index == 0) {
+                        while (typeof a2 === 'undefined' || a == a2) {
+                            a2 = Math.floor(1 + 20 * Math.random());
+                        }
+                    } else if (level2.index == 1) {
+                        while (typeof a2 === 'undefined' || a == a2) {
+                            a2 = Math.floor(11 + 40 * Math.random());
+                        }
+                    } else {
+                        while (typeof a2 === 'undefined' || a == a2) {
+                            a2 = Math.floor(31 + 170 * Math.random());
+                        }
+                    }
+                    a = a2;
+                    soal_teks = `Representasi bilangan dari ${a} adalah ...`;
+                    if (tipe2.index == 0) {
+                        soal_teks += `<br><br>- Tulis jawaban dengan jumlah titik (.). Sebagai contoh, 5 = .....`;
+                    }
                     document.getElementById('soal').innerHTML = soal_teks;
+                    hasil = '';
+                    for (let i = 1; i <= a; i++) {
+                        hasil += '.';
+                    }
+                    /* document.getElementById('tipe2').innerHTML = `
+                    <label>Input jawaban</label><br>
+                    <input type="text" id="angka" min="0" style="width:300px">
+                    `; */
                 } else if (e1_bentuk.index == 3) {
-                    soal_teks = 'Nama bilangan dari 20 adalah ...';
+                    function nama_bilangan(angka) {
+                        satuan_list = ['satu','dua','tiga','empat','lima','enam','tujuh','delapan','sembilan'];
+                        teks = '';
+                        if (angka == 0) {
+                            return 'nol';
+                        } else if (angka <= 9) {
+                            return satuan_list[angka-1];
+                        } else if (angka == 10) {
+                            return 'sepuluh';
+                        } else if (angka == 11) {
+                            return 'sebelas';
+                        } else if (angka >= 12 && angka <= 19) {
+                            return satuan_list[angka-11] + ' belas';
+                        } else if (angka >= 20 && angka <= 99) {
+                            teks += satuan_list[parseInt(angka/10)-1] + ' puluh';
+                            if (angka % 10 >= 1) teks += ' ' + satuan_list[(angka-1)%10];
+                            return teks;
+                        } else if (angka >= 100 && angka <= 999) {
+                            if (angka <= 199) teks += 'seratus';
+                            else teks += satuan_list[parseInt(angka/10)-1] + ' ratus';
+                            if (angka % 100 >= 1) teks += ' ' + satuan_list[(angka-1)%10];
+                            else if (angka % 100 == 10) teks += 'sepuluh';
+                            else if (angka % 100 == 11) teks += 'sebelas';
+                            else if (angka % 100 >= 12 && angka % 100 <= 19) teks += satuan_list[angka-11] + ' belas';
+                            else {
+                                teks += satuan_list[parseInt(angka/10)-1] + ' puluh';
+                                if (angka % 10 >= 1) teks += ' ' + satuan_list[(angka-1)%10];
+                            }
+                            return teks;
+                        } else {
+                            return 'seribu';
+                        }
+                    }
+                    if (level2.index == 0) {
+                        // hasil = Math.floor(1 + 20 * Math.random());
+                        // while (typeof a2 === 'undefined' || a == a2 || check) {
+                        while (typeof a2 === 'undefined' || a == a2) {
+                            a2 = Math.floor(21 * Math.random());
+                            // console.log(a2);
+                        }
+                        // ctx.clear();
+                        // ctx.fill();
+                    } else if (level2.index == 1) {
+                        while (typeof a2 === 'undefined' || a == a2) {
+                            a2 = Math.floor(11 + 90 * Math.random());
+                        }
+                    } else {
+                        while (typeof a2 === 'undefined' || a == a2) {
+                            a2 = Math.floor(76 + 925 * Math.random());
+                        }
+                    }
+                    a = a2;
+                    soal_teks = `Nama bilangan dari ${a} adalah ...`;
+                    hasil = nama_bilangan(a);
                     document.getElementById('soal').innerHTML = soal_teks;
                 } else {
                     soal_teks = 'Lambang bilangan dari dua puluh adalah ...';
@@ -2982,10 +3063,17 @@
             if (tipe2.index == 0) {
                 document.getElementById("pilihan").style.display = "none";
                 // <input type="number" id="angka" min="0">
-                document.getElementById('tipe2').innerHTML = `
-                <label>Input jawaban</label><br>
-                <input type="text" id="angka" min="0">
-                `;
+                if (e1.index == 0 && [2,3].includes(e1_bentuk.index)) {
+                    document.getElementById('tipe2').innerHTML = `
+                    <label>Input jawaban</label><br>
+                    <input type="text" id="angka" min="0" style="width:400px">
+                    `;
+                } else {
+                    document.getElementById('tipe2').innerHTML = `
+                    <label>Input jawaban</label><br>
+                    <input type="text" id="angka" min="0">
+                    `;
+                }
                 var input = document.getElementById("angka");
                 input.addEventListener("keypress", function(event) {
                     if (event.key === "Enter") {
@@ -3217,7 +3305,8 @@
                 var e1 = e.options[e.selectedIndex];
                 // var tanda = '';
                 // e1.index == 6 & e1_bentuk.index == 0
-                if (e1.index <= 6 || (e1.index == 7 && (e1_bentuk.index == 0 || e1_bentuk.index == 2)) || e1.index == 8 || e1.index == 9 || e1.index == 17 || e1.index == 21 || e1.index == 32) {
+                // if (e1.index <= 6 || (e1.index == 7 && (e1_bentuk.index == 0 || e1_bentuk.index == 2)) || e1.index == 8 || e1.index == 9 || e1.index == 17 || e1.index == 21 || e1.index == 32) {
+                if (([1,2,3,4,5,6,8,9,17,21,32].includes(e1.index)) || (e1.index == 0 && [0,1,4].includes(e1_bentuk.index)) || (e1.index == 7 && (e1_bentuk.index == 0 || e1_bentuk.index == 2))) {
                     angka = parseInt(angka_awal);
                     jawaban_check = angka == hasil;
                     // hasil = hasil;
