--- a/projects/Soal Matematika.html
+++ b/projects/Soal Matematika.html
@@ -673,7 +673,8 @@
     <!-- <p>Terakhir diupdate: 10 Oktober 2025</p> -->
 	<!-- <p>Terakhir diupdate: 14 Oktober 2025</p> -->
     <!-- <p>Terakhir diupdate: 15 Oktober 2025</p> -->
-	<p>Terakhir diupdate: 16 Oktober 2025</p>
+	<!-- <p>Terakhir diupdate: 16 Oktober 2025</p> -->
+    <p>Terakhir diupdate: 22 Oktober 2025</p>
 
     <script>
         // Time
@@ -980,6 +981,16 @@
                         else ctx.fillRect(9+10*(0+(a_count-1)%39), 9+10*(0+parseInt((a_count-1)/39)), 2, 2);
                         // ctx.fill();
                     }
+                    if (tipe2.index == 1) {
+                        for (let i = 1; i <= j_pilihan2; i++) {
+                            value_check = true;
+                            while (value_check || pilihan_list.indexOf(value) > -1 || value == hasil) {
+                                value = Math.floor(a/2+Math.max(a,6)*Math.random());
+                                value_check = false;
+                            }
+                            pilihan_list.push(value);
+                        }
+                    }
                 } else if (e1_bentuk.index == 1) {
                     soal_teks = `
                     <canvas id="myCanvas" width="400" height="300" style="background-color:#202020; border:1px solid gray;">
@@ -1022,6 +1033,16 @@
                             a_count += Math.floor(1 + (max_gap-1) * Math.random());
                         }
                     }
+                    if (tipe2.index == 1) {
+                        for (let i = 1; i <= j_pilihan2; i++) {
+                            value_check = true;
+                            while (value_check || pilihan_list.indexOf(value) > -1 || value == hasil) {
+                                value = Math.floor(a/2+Math.max(a,6)*Math.random());
+                                value_check = false;
+                            }
+                            pilihan_list.push(value);
+                        }
+                    }
                 } else if (e1_bentuk.index == 2) {
                     // soal = 'Banyaknya titik di gambar ini adalah ...';
                     if (level2.index == 0) {
@@ -1051,6 +1072,20 @@
                     <label>Input jawaban</label><br>
                     <input type="text" id="angka" min="0" style="width:300px">
                     `; */
+                    if (tipe2.index == 1) {
+                        for (let i = 1; i <= j_pilihan2; i++) {
+                            value_check = true;
+                            while (value_check || pilihan_list.indexOf(value) > -1 || value == hasil) {
+                                value_pre = Math.floor(a/2+Math.max(a,6)*Math.random());
+                                value = '';
+                                for (let i = 1; i <= value_pre; i++) {
+                                    value += '.';
+                                }
+                                value_check = false;
+                            }
+                            pilihan_list.push(value);
+                        }
+                    }
                 } else if (e1_bentuk.index == 3) {
                     if (level2.index == 0) {
                         // hasil = Math.floor(1 + 20 * Math.random());
@@ -2093,14 +2128,15 @@
                 }
 
             } else if (e1.index == 15) {
+                mathrandom = Math.random();
                 // if (Math.random() < 0.125) {b = 2;}
-                if (Math.random() < 0.125) b = 2;
-                else if (Math.random() < 0.25) b = 4;
-                else if (Math.random() < 0.375) b = 5;
-                else if (Math.random() < 0.5) b = 10;
-                else if (Math.random() < 0.625) b = 20;
-                else if (Math.random() < 0.75) b = 25;
-                else if (Math.random() < 0.875) b = 50;
+                if (mathrandom < 0.125) b = 2;
+                else if (mathrandom < 0.25) b = 4;
+                else if (mathrandom < 0.375) b = 5;
+                else if (mathrandom < 0.5) b = 10;
+                else if (mathrandom < 0.625) b = 20;
+                else if (mathrandom < 0.75) b = 25;
+                else if (mathrandom < 0.875) b = 50;
                 else b = 100;
                 a = Math.floor(1+b*Math.random());
                 c = Math.floor(1+100*Math.random());
@@ -2119,6 +2155,17 @@
                 soal_teks += `</span>&nbsp; adalah ...`
                 soal_teks += `<br><br>- Hasil jawaban di input jawaban dikali 100 dari hasil awalnya`
                 soal_suara = `Hasil dari ${soal_suara} adalah ...`;
+                document.getElementById('soal').innerHTML = soal_teks;
+
+            } else if (e1.index == 16) {
+                if (e1_bentuk.index == 0) {
+                    soal_teks = `Bilangan yang lebih besar dari 5 adalah ...`;
+                    // soal_suara = soal_teks;
+                } else if (e1_bentuk.index == 1) {
+                    soal_teks = `Bilangan mana yang lebih besar, \\(2\\over3\\) atau \\(60\\%\\)?`;
+                } else {
+                    soal_teks = `Urutan bilangan \\(1{2\\over3}, 160\\%, 1.68\\) dari terkecil hingga terbesar adalah ...`;
+                }
                 document.getElementById('soal').innerHTML = soal_teks;
 
             } else if (e1.index == 17) {
@@ -2848,10 +2895,36 @@
 					soal_teks = `Diketahui fungsi linear &nbsp;\\(f(x) = 2x+3\\). Nilai dari &nbsp;\\(f^{-1}(5)\\) adalah ...`;
                     soal_teks += `<br><br><span style="color:yellow">Jenis pertanyaan ini belum tersedia</style>`;
                 } else if (e1_bentuk.index == 2) {
+                    mulvar_list = [['a','b'],['x','y'],['m','n']]
+                    mulvar = mulvar_list[Math.floor(mulvar_list.length*Math.random())];
 				    simbol_list = ['*','@','|','⬤','○','★','☆','■','□','▲','▼'];
 					simbol = simbol_list[Math.floor(simbol_list.length*Math.random())];
+                    fungsi_index = Math.floor(5*Math.random());
                     // soal_teks = `Didefinisikan \\(a*b = ab+a-b\\). Nilai dari \\(2*(3*4)\\) adalah ...`;
-					soal_teks = `Didefinisikan \\(a${simbol}b = ab+a-b\\). Nilai dari \\(2${simbol}(3${simbol}4)\\) adalah ...`;
+                    function fungsi_list(fungsi_index,var_a,var_b,val_a,val_b) {
+                        mathrandom = Math.random();
+                        if (fungsi_index == 0) {
+                            fungsi = `${var_a}${var_b}+${var_a}+${var_b}`;
+                            hasil = a*b+a+b;
+                        } else if (fungsi_index == 1) {
+                            fungsi = `${var_a}${var_b}+${var_a}-${var_b}`;
+                            hasil = a*b+a-b;
+                        } else if (fungsi_index == 2) {
+                            fungsi = `${var_a}^2+${var_b}^2`;
+                            hasil = a**2+b**2;
+                        } else if (fungsi_index == 3) {
+                            fungsi = `${var_a}(${var_a}+${var_b})`;
+                            hasil = a*(a+b);
+                        } else {
+                            fungsi = `{1\\over${var_a}}+{1\\over${var_b}}`;
+                            hasil = 1/a+1/b;
+                        }
+                        return [fungsi, hasil]
+                    }
+                    a = 2;
+                    b = 3;
+                    grup_fungsi = fungsi_list(fungsi_index,mulvar[0],mulvar[1],a,b);
+					soal_teks = `Didefinisikan \\(${mulvar[0]}${simbol}${mulvar[1]} = ${grup_fungsi[0]}\\). Nilai dari \\(2${simbol}(3${simbol}4)\\) adalah ...`;
                     soal_teks += `<br><br><span style="color:yellow">Jenis pertanyaan ini belum tersedia</style>`;
                 } else {
                     soal_teks = `Diketahui suatu fungsi linear \\(f(x)\\) dan \\(g(x)\\), sehingga \\(f(x+g(y))=2x-3y+m\\). Jika diketahui \\(g^{-1}(2)=4\\) dan \\(m=1\\), maka nilai dari \\(f^{-1}(1+g(5))\\) adalah ...`;
@@ -3067,6 +3140,7 @@
                     document.getElementById("pilihan-bentuk-sub").innerHTML = `
                         <option>Penjumlahan biasa</option>
                         <option>Representasi penjumlahan</option>
+                        <option>Soal cerita penjumlahan</option>
                     `;
                 }
             } else if (e1.index == 2) {
@@ -3093,6 +3167,8 @@
                     `;
                 }
             } else if (e1.index == 6) {
+                document.getElementById("bentuk-sub").style.display = 'none';
+            } else if (e1.index == 7) {
                 document.getElementById("bentuk-sub").style.display = 'none';
             } else if (e1.index == 8) {
                 document.getElementById("bentuk-sub").style.display = 'block';
@@ -3166,6 +3242,15 @@
                     `;
                 }
                 document.getElementById("bentuk-penjelasan").innerHTML = `Pecahan atau fraksi adalah istilah yang merujuk pada suatu bagian atau sejumlah bagian yang setara dari sesuatu yang "penuh". Dalam matematika, pecahan umumnya ditunjukkan dengan notasi /(a /over b/), di mana b ≠ 0. Dalam hal ini a merupakan pembilang, dan b merupakan penyebut. Dalam bilangan pecahan adalah bagaimana suatu nilai dapat disederhanakan. Penyederhanaan pembilang dan penyebut akan memudahkan dalam operasi aritmatika sehingga tidak menghasilkan angka yang terlalu besar tetapi tetap mempunyai nilai yang sama.`.replaceAll("/","&#x005c");
+            } else if (e1.index == 16) {
+                document.getElementById("bentuk-sub").style.display = 'block';
+                if (change) {
+                    document.getElementById("pilihan-bentuk-sub").innerHTML = `
+                        <option>Perbandingan bilangan</option>
+                        <option>Perbandingan dua bilangan</option>
+                        <option>Urutan bilangan</option>
+                    `;
+                }
             } else if (e1.index == 17) {
                 document.getElementById("bentuk-sub").style.display = 'block';
                 if (change) {
